--- a/style.css
+++ b/style.css
@@ -1,109 +1,101 @@
-.ic5050 {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    flex: 1 2 auto;
-    padding: 20px 0;
-}
+body {
+    margin: 0;
+    padding: 0;
+  }
 
-.ic5050.light {
-    background-color: #f5f5f5;
-    color: #000
-}
-
-.ic5050.light h1 {
-    border-bottom: 1px solid #000;
-}
-
-.ic5050.dark h1 {
-    border-bottom: 1px solid #fff;
-}
-
-.ic5050.dark {
-    background-color: #696969;
-    color: #fff;
-}
-
-.ic5050 h1 {
+.main-container h2 {
     font-size: 3vw;
     padding-bottom: 3px;
 }
 
-.ic5050 h3 {
-    font-size: 2.2vw;
-}
-
-.ic5050 p {
-    font-size: 1.8vw;
+.main-container p {
+    font-size: 1.6vw;
     line-height: 1.3
 }
-
-.cont50 {
-    width: 60%;
-}
-
-.img50 {
-    width: 30%;
-}
-
-.img50 img {
+  
+  .img_holder{
     width: 100%;
+    height: 100%;
+    position: relative;
+  }
+  
+  .img_holder img{
+    max-width: 100%;
+    max-height: 100%;
+    display: block;
+    margin: 0 auto;
+  }
+  
+  /* For images that are taller than they are wide. */
+  .tall img {
+    max-height: 80vh;
 }
-
-.ic5050.reverse .cont50 {
+  
+  .dark {
+    background: #282828;
+    color: #fff;
+  }
+  
+  /*  */
+  .main-container {
+    display: flex;
+    align-items: center;
+    align-content: space-around;
+  }
+  
+  .left {
     order: 1;
-}
-
-.ic5050.reverse .img50 {
+  }
+  
+  .right {
     order: 2;
+  }
+  
+  .half {
+    margin: 4vh 5vw;
+    /* Determining width of each child of flex parent. */
+    flex-basis: 50%;
+  }
+  
+@media only screen and (min-width: 1500px) {
+    .img-container, .img-container.tall {
+        height: 30vh;
+    }
 }
-
-@media only screen and (min-width: 1000px) {
-    .ic5050 h1 {
+  
+@media only screen and (min-width: 1200px) {
+    .main-container h2 {
         font-size: 30px;
     }
 
-    .ic5050 h3 {
-        font-size: 23px;
-    }
-
-    .ic5050 p {
+    .main-container p {
         font-size: 18px;
     }
 }
 
 @media only screen and (max-width: 776px) {
-    .ic5050 h1 {
+    .main-container h2 {
         font-size: 20px;
     }
-
-    .ic5050 h3 {
-        font-size: 17px;
-    }
     
-    .ic5050 p {
+    .main-container p {
         font-size: 14px;
     }
 }
 
 @media only screen and (max-width: 600px) {
-    .ic5050 {
+    .main-container {
         display: block;
     }
 
-    .ic5050 > div {
+    .main-container > div {
         display: block;
         margin: 0 auto;
         width: 100%;
     }
 
-    .cont50 {
-        padding: 0 5vw 5vw;
-        box-sizing: border-box;
-    }
-
-    .img50 img {
-        padding: 5vw 5vw 0;
+    .half {
+        padding: 3vw 5vw;
         box-sizing: border-box;
     }
 }
